--- a/Bicycle/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Bicycle/Views/Shared/_LayoutPageAdmin.cshtml
@@ -22,6 +22,7 @@
     @Scripts.Render("~/Scripts/bootstrap-table.js")
     @Scripts.Render("~/Scripts/bootstrap-table-zh-CN.js")
     @Scripts.Render("~/Scripts/dialog.js")
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     @RenderSection("scripts", required: false)
 </head>
 <body>
