--- a/Bicycle/Views/User/Index.cshtml
+++ b/Bicycle/Views/User/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="jumbotron" style="margin-top: 20px;">
     <h2>欢迎来到公共自行车管理系统!</h2>
     <p class="lead">本系统实现了的功能: 1.租借卡的办理与充值。 2.站点车辆租用情况查询。 3.自行车借、还操作。 4.自行车租用情况统计......</p>
-    <p><a class="btn btn-lg btn-success" href="javascript:void(0)" role="button">点击开始</a></p>
+    <p><a class="btn btn-lg btn-success" href="/User/Bicycle" role="button">点击开始</a></p>
 </div>
 
 <div class="row">
