--- a/Bicycle/Views/User/Situation.cshtml
+++ b/Bicycle/Views/User/Situation.cshtml
@@ -42,7 +42,7 @@
             <div class="col-md-7 many-p">
                 <p>现在一共有{{ siteNum }}个公共自行车站点</p>
                 <p>目前停车数量最多的站点是{{ maxSite.name }}</p>
-                <p>目前停车数量最少的站点是{{ maxSite.name }}</p>
+                <p>目前停车数量最少的站点是{{ minSite.name }}</p>
             </div>
             <div class="col-md-4">
                 <div class="chart-body">
