--- a/Bicycle/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Bicycle/Views/Shared/_LayoutPageAdmin.cshtml
@@ -57,6 +57,7 @@
                         <li><a href="/Admin/AdminSite">站点管理</a></li>
                         <li><a href="/Admin/AdminBorrow">租借管理</a></li>
                         <li><a href="/Admin/AdminIfo">信息编辑</a></li>
+                        <li>@Html.ActionLink("自行车租用情况", "Situation", "User")</li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a>欢迎您</a></li>
