--- a/Bicycle/Views/Shared/_Layout.cshtml
+++ b/Bicycle/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
     @Scripts.Render("~/Scripts/bootstrap-table.js")
     @Scripts.Render("~/Scripts/bootstrap-table-zh-CN.js")
     @Scripts.Render("~/Scripts/dialog.js")
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.20.1/moment.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.20.1/locale/zh-cn.js"></script>
     @RenderSection("scripts", required: false)
 </head>
 <body>
@@ -40,7 +43,6 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("主页", "Index", "User")</li>
                     <li>@Html.ActionLink("借车/还车", "Bicycle", "User")</li>
-                    <li>@Html.ActionLink("自行车租用情况", "Situation", "User")</li>
                 </ul>
 
                 @if (Session["user"] == null)
