--- a/Bicycle/Views/Shared/_Layout.cshtml
+++ b/Bicycle/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
@@ -41,14 +41,18 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("主页", "Index", "User")</li>
-                    <li>@Html.ActionLink("借车/还车", "Bicycle", "User")</li>
+                    <li>
+                        <a href="/User/Index"><span class="fa fa-home"></span> 主页</a>
+                    </li>
+                    <li>
+                        <a href="/User/Bicycle"><span class="fa fa-bicycle"></span> 借车/还车</a>
+                    </li>
                 </ul>
 
                 @if (Session["user"] == null)
                 {
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" data-toggle="modal" data-target="#modalLogin">登录</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#modalLogin"><span class="fa fa-sign-in"></span> 登录</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#modalRegister">注册</a></li>
                     </ul>
                 }
@@ -64,7 +68,7 @@
                                 <li>@Html.ActionLink("个人中心", "UserInfo", "User")</li>
                                 <li><a href="#" data-toggle="modal" data-target="#modalPass">修改密码</a></li>
                                 <li class="divider"></li>
-                                <li><a href="/User/Logout">安全退出</a></li>
+                                <li><a href="/User/Logout"><span class="fa fa-sign-out"></span> 安全退出</a></li>
                             </ul>
                         </li>
                     </ul>
